Split notebooks into god component and god class

--- a/DetectionOfGodComponentUsingDecisionTree.ipynb
+++ b/DetectionOfGodComponentUsingDecisionTree.ipynb
@@ -64,8 +64,9 @@
     "        data[column] = data[column].replace(ordinal_mapping)\n",
     "    return data\n",
     "\n",
-    "#dataset_file = \"input/dataset.csv\"\n",
-    "dataset_file = \"input/jfreechart/dataset.csv\"\n",
+    "project_name = \"jfreechart\"\n",
+    "#project_name = \"argouml\"\n",
+    "dataset_file = \"input/\" + project_name + \"/package-metrics-dataset.csv\"\n",
     "dataset = load_data(dataset_file)\n",
     "dataset = remove_empty_rows(dataset)\n",
     "dataset = remove_unnamed_columns(dataset)\n",
