Add notebooks related to god class detection

--- a/GraphDataPreprocessorForGodComponent.ipynb
+++ b/GraphDataPreprocessorForGodComponent.ipynb
@@ -7,8 +7,10 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import pandas as pd\n",
     "\n",
-    "project_name = \"jfreechart\"\n",
+    "project_name = \".\"\n",
+    "#project_name = \"jfreechart\"\n",
     "#project_name = \"argouml\"\n",
     "package_dependency_file = \"input/\" + project_name + \"/all-package-deps.cmr\"\n",
     "with open(package_dependency_file, 'r') as file:\n",
@@ -1246,6 +1248,7 @@
     "        node_data['WMC'] = node_embedding['WMC'].iloc[0]\n",
     "        node_data['is_god_component'] = node_embedding['is_god_component'].iloc[0]\n",
     "        print('node_data: ', node_data)\n",
+    "        node_embedding_list.append(node_data)\n",
     "    return node_embedding_list\n",
     "\n",
     "node_embedding_list = get_node_embedding_list(G, dataset)\n",
