--- a/DetectionOfProblematicClassUsingDecisionTree.ipynb
+++ b/DetectionOfProblematicClassUsingDecisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "    return data\n",
     "\n",
     "def remove_package_rows(data):\n",
-    "    data = data.dropna(subset=['CBO', 'DIT'])\n",
+    "    data = data[~data['QualifiedName'].str.contains(\"<Package>\")]\n",
     "    return data\n",
     "\n",
     "def convert_ordinal_to_numerical(data):\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -93,30 +93,36 @@
      "output_type": "stream",
      "text": [
       "Number of instances in the dataset: 633\n",
-      "Number of God Classes in the dataset: 68\n"
+      "Number of Problematic Classes in the dataset: 69\n",
+      "Number of Highly Problematic Classes in the dataset: 32\n"
      ]
     }
    ],
    "source": [
-    "def label_god_class(row, complexity_threshold=2, size_threshold=2):\n",
-    "    if row['Complexity'] > complexity_threshold and row['Size'] > size_threshold:\n",
+    "def label_problematic_class(row, problematic_class_threshold=3, highly_problematic_class_threshold=4):\n",
+    "    problematic_score = (row['Complexity'] + row['Coupling'] + row['Size'] + row['Lack of Cohesion']) / 4\n",
+    "    if problematic_score >= highly_problematic_class_threshold:\n",
+    "        return 2\n",
+    "    elif problematic_score >= problematic_class_threshold:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
     "\n",
     "# Label the dataset\n",
-    "dataset['is_god_class'] = dataset.apply(label_god_class, axis=1)\n",
+    "dataset['Problematic'] = dataset.apply(label_problematic_class, axis=1)\n",
     "\n",
-    "# Count the number of God Components\n",
+    "# Count the number of Problematic Classes\n",
     "num_dataset_rows = dataset.shape[0]\n",
-    "num_god_classes = dataset['is_god_class'].sum()\n",
+    "num_problematic_classes = dataset[dataset['Problematic'] == 1].shape[0]\n",
+    "num_highly_problematic_classes = dataset[dataset['Problematic'] == 2].shape[0]\n",
     "print(f'Number of instances in the dataset: {num_dataset_rows}')\n",
-    "print(f'Number of God Classes in the dataset: {num_god_classes}')"
+    "print(f'Number of Problematic Classes in the dataset: {num_problematic_classes}')\n",
+    "print(f'Number of Highly Problematic Classes in the dataset: {num_highly_problematic_classes}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +143,12 @@
       "5  782.0  780.0  0.0   1.0  0.0  50.0   0.0   0.0  0.799  0.569   3.0  0.0   \n",
       "6   17.0    1.0  0.0   2.0  1.0   0.0   0.0   0.0  0.000  0.000   0.0  0.0   \n",
       "\n",
-      "   is_god_class  \n",
-      "2             0  \n",
-      "3             0  \n",
-      "4             0  \n",
-      "5             1  \n",
-      "6             0  \n"
+      "   Problematic  \n",
+      "2            0  \n",
+      "3            0  \n",
+      "4            0  \n",
+      "5            2  \n",
+      "6            0  \n"
      ]
     }
    ],
@@ -157,13 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_data(data):\n",
-    "    X = data.drop(['QualifiedName', 'is_god_class'], axis=1)\n",
-    "    y = data['is_god_class']\n",
+    "    X = data.drop(['QualifiedName', 'Problematic'], axis=1)\n",
+    "    y = data['Problematic']\n",
     "    return X, y\n",
     "\n",
     "X, y = preprocess_data(dataset)"
@@ -171,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -210,18 +216,20 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[108   0]\n",
-      " [  0  19]]\n",
+      "[[96  2  0]\n",
+      " [ 1 16  2]\n",
+      " [ 0  2  8]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00       108\n",
-      "           1       1.00      1.00      1.00        19\n",
+      "           0       0.99      0.98      0.98        98\n",
+      "           1       0.80      0.84      0.82        19\n",
+      "           2       0.80      0.80      0.80        10\n",
       "\n",
-      "    accuracy                           1.00       127\n",
-      "   macro avg       1.00      1.00      1.00       127\n",
-      "weighted avg       1.00      1.00      1.00       127\n",
+      "    accuracy                           0.94       127\n",
+      "   macro avg       0.86      0.87      0.87       127\n",
+      "weighted avg       0.95      0.94      0.95       127\n",
       "\n"
      ]
     }
