--- a/DetectionOfProblematicComponentUsingDecisionTree.ipynb
+++ b/DetectionOfProblematicComponentUsingDecisionTree.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          QualifiedName                         Name   \n",
-      "1              <Package>org.jfree.chart              org.jfree.chart  \\\n",
-      "2  <Package>org.jfree.chart.annotations  org.jfree.chart.annotations   \n",
-      "3          <Package>org.jfree.chart.api          org.jfree.chart.api   \n",
-      "4         <Package>org.jfree.chart.axis         org.jfree.chart.axis   \n",
-      "5        <Package>org.jfree.chart.block        org.jfree.chart.block   \n",
+      "                             QualifiedName                            Name   \n",
+      "1           <Package>org.argouml.activity2           org.argouml.activity2  \\\n",
+      "2   <Package>org.argouml.activity2.diagram   org.argouml.activity2.diagram   \n",
+      "3         <Package>org.argouml.application         org.argouml.application   \n",
+      "4     <Package>org.argouml.application.api     org.argouml.application.api   \n",
+      "5  <Package>org.argouml.application.events  org.argouml.application.events   \n",
       "\n",
-      "   Complexity  Coupling  Size  Lack of Cohesion  #(C&I)    #C   #I     LOC   \n",
-      "1           3         1     3                 1    13.0   9.0  4.0  2441.0  \\\n",
-      "2           2         3     3                 1    20.0  16.0  4.0  1929.0   \n",
-      "3           1         1     3                 1    14.0  13.0  1.0   418.0   \n",
-      "4           4         4     5                 1    46.0  44.0  2.0  7056.0   \n",
-      "5           2         3     3                 1    22.0  17.0  5.0  1723.0   \n",
+      "   Complexity  Coupling  Size  Lack of Cohesion  #(C&I)    #C   #I    LOC   \n",
+      "1           1         1     1                 1     3.0   3.0  0.0   39.0  \\\n",
+      "2           1         4     3                 1    30.0  26.0  4.0  847.0   \n",
+      "3           1         1     2                 1     6.0   6.0  0.0  476.0   \n",
+      "4           1         1     2                 1     7.0   2.0  5.0  170.0   \n",
+      "5           1         2     3                 1    16.0   9.0  7.0  353.0   \n",
       "\n",
-      "      AC    EC    Abs    Ins     ND     WMC  \n",
-      "1   64.0   5.0  0.462  0.072  0.466   576.0  \n",
-      "2    6.0  20.0  0.300  0.769  0.069   457.0  \n",
-      "3  215.0   3.0  0.071  0.014  0.915   105.0  \n",
-      "4   91.0  32.0  0.152  0.260  0.588  1828.0  \n",
-      "5   19.0  18.0  0.227  0.486  0.287   485.0  \n"
+      "     AC    EC    Abs    Ins     ND    WMC  \n",
+      "1   0.0   2.0  0.000  1.000  0.000   12.0  \n",
+      "2   1.0  23.0  0.133  0.958  0.091  187.0  \n",
+      "3   0.0   4.0  0.000  1.000  0.000   97.0  \n",
+      "4  91.0   2.0  0.857  0.022  0.121   31.0  \n",
+      "5  41.0   7.0  0.500  0.146  0.354  121.0  \n"
      ]
     }
    ],
@@ -64,8 +64,8 @@
     "        data[column] = data[column].replace(ordinal_mapping)\n",
     "    return data\n",
     "\n",
-    "project_name = \"jfreechart\"\n",
-    "#project_name = \"argouml\"\n",
+    "#project_name = \"jfreechart\"\n",
+    "project_name = \"argouml\"\n",
     "dataset_file = \"input/\" + project_name + \"/package-metrics-dataset.csv\"\n",
     "dataset = load_data(dataset_file)\n",
     "dataset = remove_empty_rows(dataset)\n",
@@ -78,57 +78,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of instances in the dataset: 42\n",
-      "Number of God Components in the dataset: 11\n"
+      "Number of instances in the dataset: 93\n",
+      "Number of Problematic Components in the dataset: 14\n",
+      "Number of Highly Problematic Components in the dataset: 1\n"
      ]
     }
    ],
    "source": [
-    "def label_god_component(row, complexity_threshold=2, size_threshold=2):\n",
-    "    if row['Complexity'] > complexity_threshold and row['Size'] > size_threshold:\n",
+    "def label_problematic_component(row, problematic_class_threshold=3, highly_problematic_class_threshold=4):\n",
+    "    problematic_score = (row['Complexity'] + row['Coupling'] + row['Size'] + row['Lack of Cohesion']) / 4\n",
+    "    if problematic_score >= highly_problematic_class_threshold:\n",
+    "        return 2\n",
+    "    elif problematic_score >= problematic_class_threshold:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
     "\n",
     "# Label the dataset\n",
-    "dataset['is_god_component'] = dataset.apply(label_god_component, axis=1)\n",
+    "dataset['Problematic'] = dataset.apply(label_problematic_component, axis=1)\n",
     "\n",
-    "# Count the number of God Components\n",
+    "# Count the number of Problematic Classes\n",
     "num_dataset_rows = dataset.shape[0]\n",
-    "num_god_components = dataset['is_god_component'].sum()\n",
+    "num_problematic_classes = dataset[dataset['Problematic'] == 1].shape[0]\n",
+    "num_highly_problematic_classes = dataset[dataset['Problematic'] == 2].shape[0]\n",
     "print(f'Number of instances in the dataset: {num_dataset_rows}')\n",
-    "print(f'Number of God Components in the dataset: {num_god_components}')"
+    "print(f'Number of Problematic Components in the dataset: {num_problematic_classes}')\n",
+    "print(f'Number of Highly Problematic Components in the dataset: {num_highly_problematic_classes}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          Name  #(C&I)    #C   #I     LOC     AC    EC    Abs   \n",
-      "1              org.jfree.chart    13.0   9.0  4.0  2441.0   64.0   5.0  0.462  \\\n",
-      "2  org.jfree.chart.annotations    20.0  16.0  4.0  1929.0    6.0  20.0  0.300   \n",
-      "3          org.jfree.chart.api    14.0  13.0  1.0   418.0  215.0   3.0  0.071   \n",
-      "4         org.jfree.chart.axis    46.0  44.0  2.0  7056.0   91.0  32.0  0.152   \n",
-      "5        org.jfree.chart.block    22.0  17.0  5.0  1723.0   19.0  18.0  0.227   \n",
+      "                             Name  #(C&I)    #C   #I    LOC    AC    EC   \n",
+      "1           org.argouml.activity2     3.0   3.0  0.0   39.0   0.0   2.0  \\\n",
+      "2   org.argouml.activity2.diagram    30.0  26.0  4.0  847.0   1.0  23.0   \n",
+      "3         org.argouml.application     6.0   6.0  0.0  476.0   0.0   4.0   \n",
+      "4     org.argouml.application.api     7.0   2.0  5.0  170.0  91.0   2.0   \n",
+      "5  org.argouml.application.events    16.0   9.0  7.0  353.0  41.0   7.0   \n",
       "\n",
-      "     Ins     ND     WMC  is_god_component  \n",
-      "1  0.072  0.466   576.0                 1  \n",
-      "2  0.769  0.069   457.0                 0  \n",
-      "3  0.014  0.915   105.0                 0  \n",
-      "4  0.260  0.588  1828.0                 1  \n",
-      "5  0.486  0.287   485.0                 0  \n"
+      "     Abs    Ins     ND    WMC  Problematic  \n",
+      "1  0.000  1.000  0.000   12.0            0  \n",
+      "2  0.133  0.958  0.091  187.0            0  \n",
+      "3  0.000  1.000  0.000   97.0            0  \n",
+      "4  0.857  0.022  0.121   31.0            0  \n",
+      "5  0.500  0.146  0.354  121.0            0  \n"
      ]
     }
    ],
@@ -143,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_data(data):\n",
-    "    X = data.drop(['Name', 'is_god_component'], axis=1)\n",
-    "    y = data['is_god_component']\n",
+    "    X = data.drop(['Name', 'Problematic'], axis=1)\n",
+    "    y = data['Problematic']\n",
     "    return X, y\n",
     "\n",
     "X, y = preprocess_data(dataset)"
@@ -157,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -196,19 +202,33 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[7 0]\n",
-      " [0 2]]\n",
+      "[[16  1  0]\n",
+      " [ 0  1  0]\n",
+      " [ 0  1  0]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00         7\n",
-      "           1       1.00      1.00      1.00         2\n",
+      "           0       1.00      0.94      0.97        17\n",
+      "           1       0.33      1.00      0.50         1\n",
+      "           2       0.00      0.00      0.00         1\n",
       "\n",
-      "    accuracy                           1.00         9\n",
-      "   macro avg       1.00      1.00      1.00         9\n",
-      "weighted avg       1.00      1.00      1.00         9\n",
+      "    accuracy                           0.89        19\n",
+      "   macro avg       0.44      0.65      0.49        19\n",
+      "weighted avg       0.91      0.89      0.89        19\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
