--- a/DetectionOfProblematicClassUsingDecisionTree.ipynb
+++ b/DetectionOfProblematicClassUsingDecisionTree.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#project_name = \".\"\n",
+    "project_name = \"jfreechart\"\n",
+    "#project_name = \"argouml\"\n",
+    "#project_name = \"kafka\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +82,6 @@
     "        data[column] = data[column].replace(ordinal_mapping)\n",
     "    return data\n",
     "\n",
-    "project_name = \"jfreechart\"\n",
-    "#project_name = \"argouml\"\n",
     "dataset_file = \"input/\" + project_name + \"/class-metrics-dataset.csv\"\n",
     "dataset = load_data(dataset_file)\n",
     "dataset = remove_empty_rows(dataset)\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +103,17 @@
      "output_type": "stream",
      "text": [
       "Number of instances in the dataset: 633\n",
-      "Number of Problematic Classes in the dataset: 69\n",
-      "Number of Highly Problematic Classes in the dataset: 32\n"
+      "Number of Problematic Classes in the dataset: 84\n",
+      "Number of Highly Problematic Classes in the dataset: 87\n"
      ]
     }
    ],
    "source": [
-    "def label_problematic_class(row, problematic_class_threshold=3, highly_problematic_class_threshold=4):\n",
+    "def label_problematic_class(row, problematic_class_threshold=2, highly_problematic_class_threshold=3):\n",
     "    problematic_score = (row['Complexity'] + row['Coupling'] + row['Size'] + row['Lack of Cohesion']) / 4\n",
-    "    if problematic_score >= highly_problematic_class_threshold:\n",
+    "    if problematic_score > highly_problematic_class_threshold:\n",
     "        return 2\n",
-    "    elif problematic_score >= problematic_class_threshold:\n",
+    "    elif problematic_score > problematic_class_threshold:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +195,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "def train_decision_tree(X, y):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "    clf = DecisionTreeClassifier()\n",
     "    clf.fit(X_train, y_train)\n",
     "    return clf, X_test, y_test\n",
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +218,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.9158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "print(f'Test Accuracy: {accuracy_score(y_test, y_pred):.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -216,20 +245,20 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[96  2  0]\n",
-      " [ 1 16  2]\n",
-      " [ 0  2  8]]\n",
+      "[[122   9   0]\n",
+      " [  4  19   1]\n",
+      " [  1   1  33]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.98      0.98        98\n",
-      "           1       0.80      0.84      0.82        19\n",
-      "           2       0.80      0.80      0.80        10\n",
+      "           0       0.96      0.93      0.95       131\n",
+      "           1       0.66      0.79      0.72        24\n",
+      "           2       0.97      0.94      0.96        35\n",
       "\n",
-      "    accuracy                           0.94       127\n",
-      "   macro avg       0.86      0.87      0.87       127\n",
-      "weighted avg       0.95      0.94      0.95       127\n",
+      "    accuracy                           0.92       190\n",
+      "   macro avg       0.86      0.89      0.87       190\n",
+      "weighted avg       0.92      0.92      0.92       190\n",
       "\n"
      ]
     }
