Modify labeling to handle problematic classes

--- a/DetectionOfProblematicClassUsingDecisionTree.ipynb
+++ b/DetectionOfProblematicClassUsingDecisionTree.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#project_name = \".\"\n",
+    "# project_name = \".\"\n",
     "project_name = \"jfreechart\"\n",
     "#project_name = \"argouml\"\n",
-    "#project_name = \"kafka\""
+    "#project_name = \"weka\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -53,21 +53,26 @@
     "    data = pd.read_csv(file_path, sep='\\t')\n",
     "    return data\n",
     "\n",
+    "\n",
     "def remove_empty_rows(data):\n",
     "    data = data.dropna(subset=['Name'])\n",
     "    return data\n",
+    "\n",
     "\n",
     "def remove_unnamed_columns(data):\n",
     "    data = data.filter(regex='^(?!Unnamed.*)')\n",
     "    return data\n",
     "\n",
+    "\n",
     "def remove_nan_columns(data):\n",
     "    data = data.dropna(axis=1, how='all')\n",
     "    return data\n",
     "\n",
+    "\n",
     "def remove_package_rows(data):\n",
     "    data = data[~data['QualifiedName'].str.contains(\"<Package>\")]\n",
     "    return data\n",
+    "\n",
     "\n",
     "def convert_ordinal_to_numerical(data):\n",
     "    ordinal_mapping = {\n",
@@ -82,6 +87,7 @@
     "        data[column] = data[column].replace(ordinal_mapping)\n",
     "    return data\n",
     "\n",
+    "\n",
     "dataset_file = \"input/\" + project_name + \"/class-metrics-dataset.csv\"\n",
     "dataset = load_data(dataset_file)\n",
     "dataset = remove_empty_rows(dataset)\n",
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -103,17 +109,20 @@
      "output_type": "stream",
      "text": [
       "Number of instances in the dataset: 633\n",
-      "Number of Problematic Classes in the dataset: 84\n",
-      "Number of Highly Problematic Classes in the dataset: 87\n"
+      "Number of Problematic Classes in the dataset: 224\n"
      ]
     }
    ],
    "source": [
-    "def label_problematic_class(row, problematic_class_threshold=2, highly_problematic_class_threshold=3):\n",
-    "    problematic_score = (row['Complexity'] + row['Coupling'] + row['Size'] + row['Lack of Cohesion']) / 4\n",
-    "    if problematic_score > highly_problematic_class_threshold:\n",
-    "        return 2\n",
-    "    elif problematic_score > problematic_class_threshold:\n",
+    "def label_problematic_class(row, problematic_class_threshold=3, highly_problematic_class_threshold=4):\n",
+    "    if row['Complexity'] >= problematic_class_threshold and \\\n",
+    "        row['Coupling'] >= problematic_class_threshold or \\\n",
+    "        row['Lack of Cohesion'] >= problematic_class_threshold:\n",
+    "        return 1\n",
+    "    elif row['Complexity'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Coupling'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Lack of Cohesion'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Size'] >= highly_problematic_class_threshold:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
@@ -124,15 +133,13 @@
     "# Count the number of Problematic Classes\n",
     "num_dataset_rows = dataset.shape[0]\n",
     "num_problematic_classes = dataset[dataset['Problematic'] == 1].shape[0]\n",
-    "num_highly_problematic_classes = dataset[dataset['Problematic'] == 2].shape[0]\n",
     "print(f'Number of instances in the dataset: {num_dataset_rows}')\n",
-    "print(f'Number of Problematic Classes in the dataset: {num_problematic_classes}')\n",
-    "print(f'Number of Highly Problematic Classes in the dataset: {num_highly_problematic_classes}')"
+    "print(f'Number of Problematic Classes in the dataset: {num_problematic_classes}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -157,23 +164,25 @@
       "2            0  \n",
       "3            0  \n",
       "4            0  \n",
-      "5            2  \n",
+      "5            1  \n",
       "6            0  \n"
      ]
     }
    ],
    "source": [
     "def remove_labeling_columns(data):\n",
-    "    data = data.drop(['Name', 'Complexity', 'Coupling', 'Size', 'Lack of Cohesion'], axis=1)\n",
+    "    data = data.drop(['Name', 'Complexity', 'Coupling',\n",
+    "                     'Size', 'Lack of Cohesion'], axis=1)\n",
     "    return data\n",
     "\n",
+    "\n",
     "dataset = remove_labeling_columns(dataset)\n",
-    "print(dataset.head())"
+    "print(dataset.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,30 +191,33 @@
     "    y = data['Problematic']\n",
     "    return X, y\n",
     "\n",
-    "X, y = preprocess_data(dataset)"
+    "\n",
+    "X, y = preprocess_data(dataset)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "\n",
     "def train_decision_tree(X, y):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
     "    clf = DecisionTreeClassifier()\n",
     "    clf.fit(X_train, y_train)\n",
     "    return clf, X_test, y_test\n",
+    "\n",
     "\n",
     "clf, X_test, y_test = train_decision_tree(X, y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,31 +225,32 @@
     "    y_pred = clf.predict(X_test)\n",
     "    return y_pred\n",
     "\n",
-    "y_pred = make_predictions(clf, X_test)"
+    "\n",
+    "y_pred = make_predictions(clf, X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.9158\n"
+      "Test Accuracy: 1.0000\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "print(f'Test Accuracy: {accuracy_score(y_test, y_pred):.4f}')"
+    "print(f'Test Accuracy: {accuracy_score(y_test, y_pred):.4f}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -245,20 +258,18 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[122   9   0]\n",
-      " [  4  19   1]\n",
-      " [  1   1  33]]\n",
+      "[[118   0]\n",
+      " [  0  72]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.96      0.93      0.95       131\n",
-      "           1       0.66      0.79      0.72        24\n",
-      "           2       0.97      0.94      0.96        35\n",
+      "           0       1.00      1.00      1.00       118\n",
+      "           1       1.00      1.00      1.00        72\n",
       "\n",
-      "    accuracy                           0.92       190\n",
-      "   macro avg       0.86      0.89      0.87       190\n",
-      "weighted avg       0.92      0.92      0.92       190\n",
+      "    accuracy                           1.00       190\n",
+      "   macro avg       1.00      1.00      1.00       190\n",
+      "weighted avg       1.00      1.00      1.00       190\n",
       "\n"
      ]
     }
@@ -266,13 +277,15 @@
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
+    "\n",
     "def evaluate_results(y_test, y_pred):\n",
     "    print(\"Confusion Matrix:\")\n",
     "    print(confusion_matrix(y_test, y_pred))\n",
     "    print(\"\\nClassification Report:\")\n",
     "    print(classification_report(y_test, y_pred))\n",
     "\n",
-    "evaluate_results(y_test, y_pred)"
+    "\n",
+    "evaluate_results(y_test, y_pred)\n"
    ]
   }
  ],
