--- a/DetectionOfProblematicComponentUsingDecisionTree.ipynb
+++ b/DetectionOfProblematicComponentUsingDecisionTree.ipynb
@@ -2,33 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#project_name = \".\"\n",
+    "#project_name = \"jfreechart\"\n",
+    "#project_name = \"argouml\"\n",
+    "project_name = \"weka\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             QualifiedName                            Name   \n",
-      "1           <Package>org.argouml.activity2           org.argouml.activity2  \\\n",
-      "2   <Package>org.argouml.activity2.diagram   org.argouml.activity2.diagram   \n",
-      "3         <Package>org.argouml.application         org.argouml.application   \n",
-      "4     <Package>org.argouml.application.api     org.argouml.application.api   \n",
-      "5  <Package>org.argouml.application.events  org.argouml.application.events   \n",
+      "                      QualifiedName                     Name  Complexity   \n",
+      "1                     <Package>weka                     weka           1  \\\n",
+      "2        <Package>weka.associations        weka.associations           4   \n",
+      "3  <Package>weka.attributeSelection  weka.attributeSelection           4   \n",
+      "4         <Package>weka.classifiers         weka.classifiers           3   \n",
+      "5   <Package>weka.classifiers.bayes   weka.classifiers.bayes           2   \n",
       "\n",
-      "   Complexity  Coupling  Size  Lack of Cohesion  #(C&I)    #C   #I    LOC   \n",
-      "1           1         1     1                 1     3.0   3.0  0.0   39.0  \\\n",
-      "2           1         4     3                 1    30.0  26.0  4.0  847.0   \n",
-      "3           1         1     2                 1     6.0   6.0  0.0  476.0   \n",
-      "4           1         1     2                 1     7.0   2.0  5.0  170.0   \n",
-      "5           1         2     3                 1    16.0   9.0  7.0  353.0   \n",
+      "   Coupling  Size  Lack of Cohesion  #(C&I)    #C   #I     LOC     AC    EC   \n",
+      "1         1     1                 1     2.0   2.0  0.0   204.0    1.0   1.0  \\\n",
+      "2         3     3                 1    29.0  26.0  3.0  3917.0    8.0  19.0   \n",
+      "3         4     4                 1    31.0  25.0  6.0  6166.0    8.0  21.0   \n",
+      "4         4     3                 1    27.0  20.0  7.0  3186.0  114.0  24.0   \n",
+      "5         2     3                 1     7.0   7.0  0.0  1640.0   37.0   6.0   \n",
       "\n",
-      "     AC    EC    Abs    Ins     ND    WMC  \n",
-      "1   0.0   2.0  0.000  1.000  0.000   12.0  \n",
-      "2   1.0  23.0  0.133  0.958  0.091  187.0  \n",
-      "3   0.0   4.0  0.000  1.000  0.000   97.0  \n",
-      "4  91.0   2.0  0.857  0.022  0.121   31.0  \n",
-      "5  41.0   7.0  0.500  0.146  0.354  121.0  \n"
+      "     Abs    Ins     ND     WMC  \n",
+      "1  0.000  0.500  0.500    74.0  \n",
+      "2  0.276  0.704  0.020  1061.0  \n",
+      "3  0.387  0.724  0.111  1681.0  \n",
+      "4  0.704  0.174  0.122   877.0  \n",
+      "5  0.000  0.140  0.860   448.0  \n"
      ]
     }
    ],
@@ -64,8 +76,6 @@
     "        data[column] = data[column].replace(ordinal_mapping)\n",
     "    return data\n",
     "\n",
-    "#project_name = \"jfreechart\"\n",
-    "project_name = \"argouml\"\n",
     "dataset_file = \"input/\" + project_name + \"/package-metrics-dataset.csv\"\n",
     "dataset = load_data(dataset_file)\n",
     "dataset = remove_empty_rows(dataset)\n",
@@ -78,63 +88,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of instances in the dataset: 93\n",
-      "Number of Problematic Components in the dataset: 14\n",
-      "Number of Highly Problematic Components in the dataset: 1\n"
+      "Number of instances in the dataset: 89\n",
+      "Number of Problematic Components in the dataset: 30\n"
      ]
     }
    ],
    "source": [
     "def label_problematic_component(row, problematic_class_threshold=3, highly_problematic_class_threshold=4):\n",
-    "    problematic_score = (row['Complexity'] + row['Coupling'] + row['Size'] + row['Lack of Cohesion']) / 4\n",
-    "    if problematic_score >= highly_problematic_class_threshold:\n",
-    "        return 2\n",
-    "    elif problematic_score >= problematic_class_threshold:\n",
+    "    if row['Complexity'] >= problematic_class_threshold and \\\n",
+    "        row['Coupling'] >= problematic_class_threshold or \\\n",
+    "        row['Lack of Cohesion'] >= problematic_class_threshold:\n",
+    "        return 1\n",
+    "    elif row['Complexity'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Coupling'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Lack of Cohesion'] >= highly_problematic_class_threshold or \\\n",
+    "        row['Size'] >= highly_problematic_class_threshold:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
-    "\n",
+    "    \n",
     "# Label the dataset\n",
     "dataset['Problematic'] = dataset.apply(label_problematic_component, axis=1)\n",
     "\n",
     "# Count the number of Problematic Classes\n",
     "num_dataset_rows = dataset.shape[0]\n",
     "num_problematic_classes = dataset[dataset['Problematic'] == 1].shape[0]\n",
-    "num_highly_problematic_classes = dataset[dataset['Problematic'] == 2].shape[0]\n",
     "print(f'Number of instances in the dataset: {num_dataset_rows}')\n",
-    "print(f'Number of Problematic Components in the dataset: {num_problematic_classes}')\n",
-    "print(f'Number of Highly Problematic Components in the dataset: {num_highly_problematic_classes}')"
+    "print(f'Number of Problematic Components in the dataset: {num_problematic_classes}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             Name  #(C&I)    #C   #I    LOC    AC    EC   \n",
-      "1           org.argouml.activity2     3.0   3.0  0.0   39.0   0.0   2.0  \\\n",
-      "2   org.argouml.activity2.diagram    30.0  26.0  4.0  847.0   1.0  23.0   \n",
-      "3         org.argouml.application     6.0   6.0  0.0  476.0   0.0   4.0   \n",
-      "4     org.argouml.application.api     7.0   2.0  5.0  170.0  91.0   2.0   \n",
-      "5  org.argouml.application.events    16.0   9.0  7.0  353.0  41.0   7.0   \n",
+      "                      Name  #(C&I)    #C   #I     LOC     AC    EC    Abs   \n",
+      "1                     weka     2.0   2.0  0.0   204.0    1.0   1.0  0.000  \\\n",
+      "2        weka.associations    29.0  26.0  3.0  3917.0    8.0  19.0  0.276   \n",
+      "3  weka.attributeSelection    31.0  25.0  6.0  6166.0    8.0  21.0  0.387   \n",
+      "4         weka.classifiers    27.0  20.0  7.0  3186.0  114.0  24.0  0.704   \n",
+      "5   weka.classifiers.bayes     7.0   7.0  0.0  1640.0   37.0   6.0  0.000   \n",
       "\n",
-      "     Abs    Ins     ND    WMC  Problematic  \n",
-      "1  0.000  1.000  0.000   12.0            0  \n",
-      "2  0.133  0.958  0.091  187.0            0  \n",
-      "3  0.000  1.000  0.000   97.0            0  \n",
-      "4  0.857  0.022  0.121   31.0            0  \n",
-      "5  0.500  0.146  0.354  121.0            0  \n"
+      "     Ins     ND     WMC  Problematic  \n",
+      "1  0.500  0.500    74.0            0  \n",
+      "2  0.704  0.020  1061.0            1  \n",
+      "3  0.724  0.111  1681.0            1  \n",
+      "4  0.174  0.122   877.0            1  \n",
+      "5  0.140  0.860   448.0            0  \n"
      ]
     }
    ],
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +182,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "def train_decision_tree(X, y):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
     "    clf = DecisionTreeClassifier()\n",
     "    clf.fit(X_train, y_train)\n",
     "    return clf, X_test, y_test\n",
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +205,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.8889\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "print(f'Test Accuracy: {accuracy_score(y_test, y_pred):.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -202,33 +232,19 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[16  1  0]\n",
-      " [ 0  1  0]\n",
-      " [ 0  1  0]]\n",
+      "[[18  0]\n",
+      " [ 3  6]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.94      0.97        17\n",
-      "           1       0.33      1.00      0.50         1\n",
-      "           2       0.00      0.00      0.00         1\n",
+      "           0       0.86      1.00      0.92        18\n",
+      "           1       1.00      0.67      0.80         9\n",
       "\n",
-      "    accuracy                           0.89        19\n",
-      "   macro avg       0.44      0.65      0.49        19\n",
-      "weighted avg       0.91      0.89      0.89        19\n",
+      "    accuracy                           0.89        27\n",
+      "   macro avg       0.93      0.83      0.86        27\n",
+      "weighted avg       0.90      0.89      0.88        27\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
